# DifyApp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DIFY_INTEGRATION.md  README.md  cleanup_kb_vectors_0.sql  difyapp-workspace.code-workspace  docker-compose.dependencies.yml  docker-compose.yml  fix_config_mismatch.sql  pom.xml  tsconfig.json  配置项检查报告.md
.run/: DifyAppApplication.run.xml
backend/: .dockerignore  .gitignore  Dockerfile  OPTIMIZATION_SUMMARY.md  README-backend.md  docker-compose.yml  package-lock.json  package.json  pom.xml  重复逻辑分析报告.md
doc/: 1.系统概要设计报告.md  11.对话历史管理功能设计文档.md  3.用户端用户手册.md  4.管理端用户手册.md  9.AI绘图功能设计文档.md  Text2SQL功能设计文档.md  概要设计报告.md  用户端用户手册.md  知识库功能设计文档.md  管理端用户手册.md  详细设计报告目录.md
easy_ocr/: .dockerignore  Dockerfile  app.py  config.example.ini  config.ini  config.py  deploy.md  docker-compose.yml  requirements.txt  test_summary.md  重新部署说明.md
front/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/: .dockerignore  .gitignore  BUILD.md  Dockerfile  (+6 more)
mindmap/: Dockerfile  README.md  config.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
mindmap/htmljs/: index.js  style.css  svg-download.js
mindmap/src/mindmap/: __init__.py  config.py  main.py
mindmap/src/mindmap/modules/: file_service.py  mindmap_service.py
mindmap/static/html/: 1766800306.html  1766800506.html  1766800788.html  1766992830.html
mindmap/static/markdown/: 1766800306.md  1766800506.md  1766800788.md  1766992830.md
mindmap/tests/: test_file_service.py  test_mindmap_service.py
(+1420 files in other folders)
