[project]
name = "mindmap"
version = "0.1.0"
description = "基于 FastAPI 的模块化思维导图生成和文件管理服务"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "modelscope>=1.32.0",
    "pyinstaller>=6.14.2",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindmap"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
